deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legion-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: legion
  template:
    metadata:
      labels:
        app: legion
    spec:
      containers:
      - name: legion
        image: ravi1611/legion:latest
        ports:
        - containerPort: 3000
