service.yml
apiVersion: v1
kind: Service
metadata:
  name: legion-service
spec:
  type: NodePort
  selector:
    app: legion
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
